--- a/package.json
+++ b/package.json
@@ -1,102 +1,102 @@
 {
-	"name": "yearnfi",
-	"version": "0.1.25",
-	"scripts": {
-		"dev": "next",
-		"inspect": "NODE_OPTIONS='--inspect' next",
-		"dev:ts": "tsc --watch",
-		"start": "tsc && next build && next start",
-		"build": "tsc && next build",
-		"export": "tsc && next build && next export -o ipfs",
-		"lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-		"prettier": "prettier --check \"./**/**/*.{json,js,ts,tsx,scss}\"",
-		"prettier-format": "prettier --config .prettierrc \"./**/**/*.{json,js,ts,tsx,scss,md}\" --write",
-		"bump": "bump",
-		"prepare": "husky install",
-		"test": "vitest run"
-	},
-	"dependencies": {
-		"@cowprotocol/cow-sdk": "2.1.0",
-		"@headlessui/react": "1.7.17",
-		"@popperjs/core": "^2.11.8",
-		"@rainbow-me/rainbowkit": "^1.1.1",
-		"@wagmi/chains": "1.8.0",
-		"@wagmi/core": "^1.4.3",
-		"@yearn-finance/web-lib": "^3.0.58",
-		"axios": "^1.5.0",
-		"dayjs": "^1.11.9",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"ethers": "5.7.2",
-		"formidable": "^3.5.1",
-		"framer-motion": "^10.16.4",
-		"graphql": "^16.8.1",
-		"graphql-request": "^6.1.0",
-		"html2canvas": "^1.4.1",
-		"next": "^14.0.1",
-		"next-pwa": "^5.6.0",
-		"next-seo": "^6.1.0",
-		"nprogress": "^0.2.0",
-		"prop-types": "^15.8.1",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-paginate": "^8.1.3",
-		"react-popper": "^2.3.0",
-		"react-wrap-balancer": "^1.1.0",
-		"recharts": "^2.8.0",
-		"swr": "2.1.5",
-		"telegraf": "^4.13.1",
-		"viem": "^1.16.2",
-		"vite": "^4.5.0",
-		"wagmi": "^1.4.3",
-		"wido": "0.4.1",
-		"zod": "^3.22.4"
-	},
-	"devDependencies": {
-		"@next/bundle-analyzer": "^13.5.4",
-		"@next/eslint-plugin-next": "^13.5.4",
-		"@sentry/nextjs": "^7.73.0",
-		"@testing-library/react": "^14.0.0",
-		"@types/node": "^20.8.2",
-		"@types/react": "^18.2.25",
-		"@types/react-dom": "^18.2.10",
-		"@typescript-eslint/eslint-plugin": "^6.7.4",
-		"@typescript-eslint/parser": "^6.7.4",
-		"@vitejs/plugin-react": "^4.1.0",
-		"autoprefixer": "^10.4.16",
-		"babel-loader": "^9.1.3",
-		"bump": "^0.2.5",
-		"eslint": "^8.50.0",
-		"eslint-config-next": "^13.5.4",
-		"eslint-import-resolver-typescript": "^3.6.1",
-		"eslint-plugin-brackets": "^0.1.3",
-		"eslint-plugin-import": "^2.28.1",
-		"eslint-plugin-react": "^7.33.2",
-		"eslint-plugin-simple-import-sort": "^10.0.0",
-		"eslint-plugin-tailwindcss": "^3.13.0",
-		"eslint-plugin-unused-imports": "^3.0.0",
-		"husky": "^8.0.3",
-		"lint-staged": "^14.0.1",
-		"next-transpile-modules": "^10.0.1",
-		"postcss": "^8.4.31",
-		"postcss-import": "^15.1.0",
-		"postcss-nesting": "^12.0.1",
-		"prettier": "^3.0.3",
-		"sass": "^1.68.0",
-		"stylelint": "^15.10.3",
-		"stylelint-config-standard": "^34.0.0",
-		"tailwindcss": "^3.3.3",
-		"ts-loader": "^9.4.4",
-		"typescript": "^5.2.2",
-		"use-query-params": "^2.2.1",
-		"vitest": "^0.34.6",
-		"webpack": "^5.88.2"
-	},
-	"resolutions": {
-		"json5": ">=2.2.2",
-		"postcss": ">=8.4.31"
-	},
-	"engines": {
-		"node": ">=18.17.0"
-	}
+  "name": "yearnfi",
+  "version": "0.1.25",
+  "scripts": {
+    "dev": "next",
+    "inspect": "NODE_OPTIONS='--inspect' next",
+    "dev:ts": "tsc --watch",
+    "start": "tsc && next build && next start",
+    "build": "tsc && next build",
+    "export": "tsc && next build && next export -o ipfs",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "prettier": "prettier --check \"./**/**/*.{json,js,ts,tsx,scss}\"",
+    "prettier-format": "prettier --config .prettierrc \"./**/**/*.{json,js,ts,tsx,scss,md}\" --write",
+    "bump": "bump",
+    "prepare": "husky install",
+    "test": "vitest run"
+  },
+  "dependencies": {
+    "@cowprotocol/cow-sdk": "2.1.0",
+    "@headlessui/react": "1.7.17",
+    "@popperjs/core": "^2.11.8",
+    "@rainbow-me/rainbowkit": "^1.2.0",
+    "@wagmi/chains": "1.8.0",
+    "@wagmi/core": "^1.4.3",
+    "@yearn-finance/web-lib": "^3.0.58",
+    "axios": "^1.6.1",
+    "dayjs": "^1.11.10",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "ethers": "5.7.2",
+    "formidable": "^3.5.1",
+    "framer-motion": "^10.16.4",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
+    "html2canvas": "^1.4.1",
+    "next": "^14.0.1",
+    "next-pwa": "^5.6.0",
+    "next-seo": "^6.4.0",
+    "nprogress": "^0.2.0",
+    "prop-types": "^15.8.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-paginate": "^8.2.0",
+    "react-popper": "^2.3.0",
+    "react-wrap-balancer": "^1.1.0",
+    "recharts": "^2.9.3",
+    "swr": "^2.2.4",
+    "telegraf": "^4.13.1",
+    "viem": "^1.16.2",
+    "vite": "^4.5.0",
+    "wagmi": "^1.4.3",
+    "wido": "0.4.1",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@next/bundle-analyzer": "^14.0.1",
+    "@next/eslint-plugin-next": "^14.0.1",
+    "@sentry/nextjs": "^7.79.0",
+    "@testing-library/react": "^14.1.0",
+    "@types/node": "^20.9.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "@vitejs/plugin-react": "^4.1.1",
+    "autoprefixer": "^10.4.16",
+    "babel-loader": "^9.1.3",
+    "bump": "^0.2.5",
+    "eslint": "^8.53.0",
+    "eslint-config-next": "^14.0.1",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-brackets": "^0.1.3",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.0.2",
+    "next-transpile-modules": "^10.0.1",
+    "postcss": "^8.4.31",
+    "postcss-import": "^15.1.0",
+    "postcss-nesting": "^12.0.1",
+    "prettier": "^3.0.3",
+    "sass": "^1.69.5",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard": "^34.0.0",
+    "tailwindcss": "^3.3.5",
+    "ts-loader": "^9.5.0",
+    "typescript": "^5.2.2",
+    "use-query-params": "^2.2.1",
+    "vitest": "^0.34.6",
+    "webpack": "^5.89.0"
+  },
+  "resolutions": {
+    "json5": ">=2.2.2",
+    "postcss": ">=8.4.31"
+  },
+  "engines": {
+    "node": ">=18.17.0"
+  }
 }
