--- a/package.json
+++ b/package.json
@@ -1,96 +1,96 @@
 {
-  "name": "yearnfi",
-  "version": "0.3.7",
-  "scripts": {
-    "dev": "next",
-    "inspect": "NODE_OPTIONS='--inspect' next",
-    "dev:ts": "tsc --watch",
-    "start": "tsc && next build && next start",
-    "build": "tsc && next build",
-    "export": "tsc && next build && next export -o ipfs",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "prettier": "prettier --check \"./**/**/*.{json,js,ts,tsx,scss}\"",
-    "prettier-format": "prettier --config .prettierrc \"./**/**/*.{json,js,ts,tsx,scss,md}\" --write",
-    "tslint": "tsc -p tsconfig.json --noEmit",
-    "bump": "bump",
-    "prepare": "husky install",
-    "test": "vitest run"
-  },
-  "dependencies": {
-    "@builtbymom/web3": "^0.0.37",
-    "@cowprotocol/cow-sdk": "2.1.0",
-    "@headlessui/react": "1.7.17",
-    "@rainbow-me/rainbowkit": "^1.3.0",
-    "@tailwindcss/typography": "^0.5.10",
-    "@wagmi/core": "^1.4.7",
-    "@yearn-finance/web-lib": "^3.0.134",
-    "axios": "^1.6.2",
-    "ethers": "5.7.2",
-    "framer-motion": "^10.16.5",
-    "graphql": "^16.8.1",
-    "graphql-request": "^6.1.0",
-    "next": "^13.5.4",
-    "next-pwa": "^5.6.0",
-    "next-seo": "^6.4.0",
-    "nprogress": "^0.2.0",
-    "react": "^18.2.0",
-    "react-dom": "18.2.0",
-    "react-paginate": "^8.2.0",
-    "recharts": "^2.9.3",
-    "swr": "^2.2.4",
-    "viem": "^1.19.9",
-    "vite": "^5.0.12",
-    "wagmi": "^1.4.7",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@next/bundle-analyzer": "^14.0.3",
-    "@next/eslint-plugin-next": "^14.0.3",
-    "@testing-library/react": "^14.1.2",
-    "@types/node": "^20.10.0",
-    "@types/react": "^18.2.39",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
-    "@vitejs/plugin-react": "^4.2.0",
-    "autoprefixer": "^10.4.16",
-    "babel-loader": "^9.1.3",
-    "bump": "^0.2.5",
-    "eslint": "^8.54.0",
-    "eslint-config-next": "^14.0.3",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-brackets": "^0.1.3",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-tailwindcss": "^3.13.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.1.0",
-    "next-transpile-modules": "^10.0.1",
-    "postcss": "^8.4.31",
-    "postcss-import": "^15.1.0",
-    "postcss-nesting": "^12.0.1",
-    "prettier": "^3.1.0",
-    "sass": "^1.69.5",
-    "stylelint": "^15.11.0",
-    "stylelint-config-standard": "^34.0.0",
-    "tailwindcss": "^3.3.5",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.3.2",
-    "vitest": "^1.2.1",
-    "webpack": "^5.89.0"
-  },
-  "resolutions": {
-    "json5": ">=2.2.2",
-    "postcss": ">=8.4.31"
-  },
-  "overrides": {
-    "wagmi/connectors": "3.1.10"
-  },
-  "engines": {
-    "node": ">=18.17.0"
-  }
+	"name": "yearnfi",
+	"version": "0.3.7",
+	"scripts": {
+		"dev": "next",
+		"inspect": "NODE_OPTIONS='--inspect' next",
+		"dev:ts": "tsc --watch",
+		"start": "tsc && next build && next start",
+		"build": "tsc && next build",
+		"export": "tsc && next build && next export -o ipfs",
+		"lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+		"prettier": "prettier --check \"./**/**/*.{json,js,ts,tsx,scss}\"",
+		"prettier-format": "prettier --config .prettierrc \"./**/**/*.{json,js,ts,tsx,scss,md}\" --write",
+		"tslint": "tsc -p tsconfig.json --noEmit",
+		"bump": "bump",
+		"prepare": "husky install",
+		"test": "vitest run"
+	},
+	"dependencies": {
+		"@builtbymom/web3": "^0.0.37",
+		"@cowprotocol/cow-sdk": "2.1.0",
+		"@headlessui/react": "^1.7.18",
+		"@rainbow-me/rainbowkit": "^1.3.0",
+		"@tailwindcss/typography": "^0.5.10",
+		"@wagmi/core": "^1.4.7",
+		"@yearn-finance/web-lib": "^3.0.156",
+		"axios": "^1.6.2",
+		"ethers": "5.7.2",
+		"framer-motion": "^11.0.3",
+		"graphql": "^16.8.1",
+		"graphql-request": "^6.1.0",
+		"next": "^14.0.4",
+		"next-pwa": "^5.6.0",
+		"next-seo": "^6.4.0",
+		"nprogress": "^0.2.0",
+		"react": "^18.2.0",
+		"react-dom": "18.2.0",
+		"react-paginate": "^8.2.0",
+		"recharts": "^2.9.3",
+		"swr": "^2.2.4",
+		"viem": "^1.19.9",
+		"vite": "^5.0.12",
+		"wagmi": "^1.4.7",
+		"zod": "^3.22.4"
+	},
+	"devDependencies": {
+		"@next/bundle-analyzer": "^14.0.3",
+		"@next/eslint-plugin-next": "^14.0.3",
+		"@testing-library/react": "^14.1.2",
+		"@types/node": "^20.10.0",
+		"@types/react": "^18.2.39",
+		"@types/react-dom": "^18.2.17",
+		"@typescript-eslint/eslint-plugin": "^6.13.1",
+		"@typescript-eslint/parser": "^6.13.1",
+		"@vitejs/plugin-react": "^4.2.0",
+		"autoprefixer": "^10.4.16",
+		"babel-loader": "^9.1.3",
+		"bump": "^0.2.5",
+		"eslint": "^8.54.0",
+		"eslint-config-next": "^14.0.3",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-import-resolver-typescript": "^3.6.1",
+		"eslint-plugin-brackets": "^0.1.3",
+		"eslint-plugin-import": "^2.29.0",
+		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-simple-import-sort": "^10.0.0",
+		"eslint-plugin-tailwindcss": "^3.13.0",
+		"eslint-plugin-unused-imports": "^3.0.0",
+		"husky": "^8.0.3",
+		"lint-staged": "^15.1.0",
+		"next-transpile-modules": "^10.0.1",
+		"postcss": "^8.4.31",
+		"postcss-import": "^15.1.0",
+		"postcss-nesting": "^12.0.1",
+		"prettier": "^3.1.0",
+		"sass": "^1.69.5",
+		"stylelint": "^15.11.0",
+		"stylelint-config-standard": "^34.0.0",
+		"tailwindcss": "^3.3.5",
+		"ts-loader": "^9.5.1",
+		"typescript": "^5.3.2",
+		"vitest": "^1.2.1",
+		"webpack": "^5.89.0"
+	},
+	"resolutions": {
+		"json5": ">=2.2.2",
+		"postcss": ">=8.4.31"
+	},
+	"overrides": {
+		"wagmi/connectors": "3.1.10"
+	},
+	"engines": {
+		"node": ">=18.17.0"
+	}
 }
