--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@rainbow-me/rainbowkit": "^2.0.2",
     "@tailwindcss/typography": "^0.5.10",
     "@wagmi/core": "^2.6.5",
-    "@yearn-finance/web-lib": "3.0.190",
+    "@yearn-finance/web-lib": "^3.0.191",
     "axios": "^1.6.7",
     "ethers": "5.7.2",
     "framer-motion": "^11.0.10",
