--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
     "next": "^14.0.4",
+    "next-plausible": "^3.12.0",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.5.0",
     "nprogress": "^0.2.0",
