--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^5.50.1",
     "@wagmi/core": "^2.11.7",
-    "@yearn-finance/web-lib": "^4.0.2",
+    "@yearn-finance/web-lib": "4.0.6",
     "axios": "^1.7.2",
     "ethers": "5.7.2",
     "framer-motion": "^11.2.10",
