--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-paginate": "^8.2.0",
     "recharts": "^2.12.7",
     "swr": "^2.2.5",
+    "tailwind-gradient-mask-image": "^1.2.0",
     "viem": "2.17.3",
     "vite": "^5.2.13",
     "wagmi": "2.10.10",
