--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,9 @@
 			"@vaults-v3/*": ["apps/vaults-v3/*"]
 		},
 		/* Basic Options */
-		"target": "esnext",
-		"module": "esnext",
-		"lib": ["es6", "es7", "esnext", "dom"],
+		"target": "ESNext",
+		"module": "ESNext",
+		"lib": ["es6", "es7", "ESNext", "dom"],
 		"allowJs": true,
 		"jsx": "preserve",
 		"removeComments": false,
