--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@rainbow-me/rainbowkit": "2.1.3",
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^5.51.11",
+    "@w84april/web-lib": "4.1.19",
     "@wagmi/core": "^2.16.3",
     "@yearn-finance/web-lib": "4.1.7",
     "axios": "^1.7.2",
