--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"@tailwindcss/typography": "^0.5.13",
 		"@tanstack/react-query": "^5.51.11",
 		"@w84april/web-lib": "4.1.19",
-		"@wagmi/core": "^2.16.3",
+		"@wagmi/core": "2.16.3",
 		"axios": "^1.7.2",
 		"ethers": "5.7.2",
 		"framer-motion": "^11.2.10",
