--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
 		"@headlessui/react": "^2.0.4",
 		"@rainbow-me/rainbowkit": "2.1.3",
 		"@tailwindcss/typography": "^0.5.13",
-		"@tanstack/react-query": "^5.51.11",
+		"@tanstack/react-query": "^5.62.14",
 		"@w84april/web-lib": "4.1.19",
-		"@wagmi/core": "2.16.3",
+		"@wagmi/core": "^2.16.3",
 		"axios": "^1.7.2",
 		"ethers": "5.7.2",
 		"framer-motion": "^11.2.10",
@@ -42,7 +42,7 @@
 		"tailwind-gradient-mask-image": "^1.2.0",
 		"viem": "2.22.2",
 		"vite": "^5.2.13",
-		"wagmi": "2.14.6",
+		"wagmi": "^2.14.6",
 		"xxhashjs": "^0.2.2",
 		"zod": "^3.23.8"
 	},
