--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"framer-motion": "^11.2.10",
 		"graphql": "^16.8.2",
 		"graphql-request": "^7.0.1",
-		"next": "^15.0.3",
+		"next": "14.2.29",
 		"next-plausible": "^3.12.0",
 		"next-pwa": "^5.6.0",
 		"nprogress": "^0.2.0",
