--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"dev:ts": "tsc --watch",
 		"start": "tsc && next build && next start",
 		"build": "tsc && next build",
+		"build:analyze": "ANALYZE=true npm run build",
 		"export": "tsc && next build && next export -o ipfs",
 		"lint": "eslint . --ext .js,.jsx,.ts,.tsx",
 		"prettier": "prettier --check \"./**/**/*.{json,js,ts,tsx,scss}\"",
