--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
 		"@clustersxyz/sdk": "^0.2.1",
 		"@cowprotocol/cow-sdk": "2.1.0",
 		"@headlessui/react": "^2.0.4",
-		"@rainbow-me/rainbowkit": "2.2.5",
+		"@rainbow-me/rainbowkit": "2.3.1",
 		"@react-hookz/web": "^24.0.4",
 		"@tanstack/react-query": "^5.51.11",
+		"@vanilla-extract/css": "^1.17.0",
+		"@vanilla-extract/sprinkles": "^1.6.3",
 		"@wagmi/connectors": "^5.1.4",
 		"@wagmi/core": "^2.11.7",
 		"axios": "^1.7.2",
