--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 		"@headlessui/react": "^2.0.4",
 		"@rainbow-me/rainbowkit": "2.2.5",
 		"@react-hookz/web": "^24.0.4",
+		"@tailwindcss/forms": "^0.5.7",
+		"@tailwindcss/typography": "^0.5.13",
 		"@tanstack/react-query": "^5.51.11",
 		"@vanilla-extract/css": "^1.17.0",
 		"@vanilla-extract/sprinkles": "^1.6.3",
@@ -43,8 +45,8 @@
 		"recharts": "^2.12.7",
 		"swr": "^2.2.5",
 		"tailwind-gradient-mask-image": "^1.2.0",
-		"@tailwindcss/forms": "^0.5.7",
-		"@tailwindcss/typography": "^0.5.13",
+		"use-indexeddb": "^2.0.2",
+		"vaul": "^1.1.2",
 		"viem": "2.30.5",
 		"wagmi": "^2.10.10",
 		"xxhashjs": "^0.2.2",
