--- a/packages/legacy/package.json
+++ b/packages/legacy/package.json
@@ -56,6 +56,7 @@
 		"@next/bundle-analyzer": "^14.2.4",
 		"@next/eslint-plugin-next": "^14.2.4",
 		"@testing-library/react": "^16.0.0",
+		"@types/minimatch": "^6.0.0",
 		"@types/node": "^20.14.2",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
