--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,7 +26,9 @@ jobs:
                   node-version: 20
 
             - name: Install Bun
-              run: curl -fsSL https://bun.sh/install | bash && export PATH="$HOME/.bun/bin:$PATH" && source /home/runner/.bashrc
+              run: |
+                  curl -fsSL https://bun.sh/install | bash
+                  echo "$HOME/.bun/bin" >> $GITHUB_PATH
 
             - name: Install project dependencies
               run: bun install
